// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TheNavigationDrawer render TheNavigationDrawer with route /bydel/sagene correctly 1`] = `
<aside
  class="navbar"
>
  <div
    class="vue-skip-to"
    text="Hopp til hovedinnhold"
  >
    <a
      class="vue-skip-to__link"
      href="#select"
    >
      
      Skip to main content
      
    </a>
  </div>
  <a
    class="logo-link"
    href="/"
  >
    <oslo-logo-stub
      aria-label="Oslo kommune logo"
      class="oslo__logo"
    />
  </a>
  <button
    class="selectedTopic"
  >
    Bydel Sagene
  </button>
  <nav
    class="navigation"
    role="navigation"
  >
    <ul
      class="state-toggle"
    >
      <li
        class="state-toggle__element"
      >
        <a
          class="state-toggle__link state-toggle__link--active"
          href="/bydel/gamleoslo"
        >
          <span>
            Utforsk en bydel
          </span>
        </a>
      </li>
      <li
        class="state-toggle__element"
      >
        <a
          class="state-toggle__link"
          href="/bydel/alle"
        >
          <span>
            Sammenlign bydeler
          </span>
        </a>
      </li>
    </ul>
    <header
      class="navigation-header"
    >
      <span>
        Velg en bydel
      </span>
    </header>
    <ul
      class="navigation-list"
    >
      
      <li
        class="navigation-link"
      >
        <!--v-if-->
        <!--v-if-->
        <a
          class="navigation-link__label"
          href="/bydel/gamleoslo"
          id="a-gamleoslo"
        >
          Bydel Gamle Oslo
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <!--v-if-->
        <!--v-if-->
        <a
          class="navigation-link__label"
          href="/bydel/grunerlokka"
          id="a-grunerlokka"
        >
          Bydel Grünerløkka
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <!--v-if-->
        <!--v-if-->
        <a
          aria-current="page"
          class="router-link-active router-link-exact-active navigation-link__label"
          href="/bydel/sagene"
          id="a-sagene"
        >
          Bydel Sagene
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <!--v-if-->
        <!--v-if-->
        <a
          class="navigation-link__label"
          href="/bydel/sthanshaugen"
          id="a-sthanshaugen"
        >
          Bydel St. Hanshaugen
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <!--v-if-->
        <!--v-if-->
        <a
          class="navigation-link__label"
          href="/bydel/frogner"
          id="a-frogner"
        >
          Bydel Frogner
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <!--v-if-->
        <!--v-if-->
        <a
          class="navigation-link__label"
          href="/bydel/ullern"
          id="a-ullern"
        >
          Bydel Ullern
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <!--v-if-->
        <!--v-if-->
        <a
          class="navigation-link__label"
          href="/bydel/vestreaker"
          id="a-vestreaker"
        >
          Bydel Vestre Aker
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <!--v-if-->
        <!--v-if-->
        <a
          class="navigation-link__label"
          href="/bydel/nordreaker"
          id="a-nordreaker"
        >
          Bydel Nordre Aker
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <!--v-if-->
        <!--v-if-->
        <a
          class="navigation-link__label"
          href="/bydel/bjerke"
          id="a-bjerke"
        >
          Bydel Bjerke
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <!--v-if-->
        <!--v-if-->
        <a
          class="navigation-link__label"
          href="/bydel/grorud"
          id="a-grorud"
        >
          Bydel Grorud
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <!--v-if-->
        <!--v-if-->
        <a
          class="navigation-link__label"
          href="/bydel/stovner"
          id="a-stovner"
        >
          Bydel Stovner
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <!--v-if-->
        <!--v-if-->
        <a
          class="navigation-link__label"
          href="/bydel/alna"
          id="a-alna"
        >
          Bydel Alna
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <!--v-if-->
        <!--v-if-->
        <a
          class="navigation-link__label"
          href="/bydel/ostensjo"
          id="a-ostensjo"
        >
          Bydel Østensjø
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <!--v-if-->
        <!--v-if-->
        <a
          class="navigation-link__label"
          href="/bydel/nordstrand"
          id="a-nordstrand"
        >
          Bydel Nordstrand
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <!--v-if-->
        <!--v-if-->
        <a
          class="navigation-link__label"
          href="/bydel/sondrenordstrand"
          id="a-sondrenordstrand"
        >
          Bydel Søndre Nordstrand
        </a>
      </li>
      
    </ul>
  </nav>
</aside>
`;

exports[`TheNavigationDrawer renders TheNavigationDrawer correctly 1`] = `
<aside
  class="navbar"
>
  <div
    class="vue-skip-to"
    text="Hopp til hovedinnhold"
  >
    <a
      class="vue-skip-to__link"
      href="#select"
    >
      
      Skip to main content
      
    </a>
  </div>
  <a
    class="logo-link"
    href="/"
  >
    <oslo-logo-stub
      aria-label="Oslo kommune logo"
      class="oslo__logo"
    />
  </a>
  <button
    class="selectedTopic"
  >
    - Velg byområde -
  </button>
  <nav
    class="navigation"
    role="navigation"
  >
    <ul
      class="state-toggle"
    >
      <li
        class="state-toggle__element"
      >
        <a
          class="state-toggle__link state-toggle__link--active"
          href="/bydel/gamleoslo"
        >
          <span>
            Utforsk en bydel
          </span>
        </a>
      </li>
      <li
        class="state-toggle__element"
      >
        <a
          class="state-toggle__link"
          href="/bydel/alle"
        >
          <span>
            Sammenlign bydeler
          </span>
        </a>
      </li>
    </ul>
    <header
      class="navigation-header"
    >
      <span>
        Velg en bydel
      </span>
    </header>
    <ul
      class="navigation-list"
    >
      
      <li
        class="navigation-link"
      >
        <!--v-if-->
        <!--v-if-->
        <a
          class="navigation-link__label"
          href="/bydel/gamleoslo"
          id="a-gamleoslo"
        >
          Bydel Gamle Oslo
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <!--v-if-->
        <!--v-if-->
        <a
          class="navigation-link__label"
          href="/bydel/grunerlokka"
          id="a-grunerlokka"
        >
          Bydel Grünerløkka
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <!--v-if-->
        <!--v-if-->
        <a
          class="navigation-link__label"
          href="/bydel/sagene"
          id="a-sagene"
        >
          Bydel Sagene
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <!--v-if-->
        <!--v-if-->
        <a
          class="navigation-link__label"
          href="/bydel/sthanshaugen"
          id="a-sthanshaugen"
        >
          Bydel St. Hanshaugen
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <!--v-if-->
        <!--v-if-->
        <a
          class="navigation-link__label"
          href="/bydel/frogner"
          id="a-frogner"
        >
          Bydel Frogner
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <!--v-if-->
        <!--v-if-->
        <a
          class="navigation-link__label"
          href="/bydel/ullern"
          id="a-ullern"
        >
          Bydel Ullern
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <!--v-if-->
        <!--v-if-->
        <a
          class="navigation-link__label"
          href="/bydel/vestreaker"
          id="a-vestreaker"
        >
          Bydel Vestre Aker
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <!--v-if-->
        <!--v-if-->
        <a
          class="navigation-link__label"
          href="/bydel/nordreaker"
          id="a-nordreaker"
        >
          Bydel Nordre Aker
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <!--v-if-->
        <!--v-if-->
        <a
          class="navigation-link__label"
          href="/bydel/bjerke"
          id="a-bjerke"
        >
          Bydel Bjerke
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <!--v-if-->
        <!--v-if-->
        <a
          class="navigation-link__label"
          href="/bydel/grorud"
          id="a-grorud"
        >
          Bydel Grorud
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <!--v-if-->
        <!--v-if-->
        <a
          class="navigation-link__label"
          href="/bydel/stovner"
          id="a-stovner"
        >
          Bydel Stovner
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <!--v-if-->
        <!--v-if-->
        <a
          class="navigation-link__label"
          href="/bydel/alna"
          id="a-alna"
        >
          Bydel Alna
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <!--v-if-->
        <!--v-if-->
        <a
          class="navigation-link__label"
          href="/bydel/ostensjo"
          id="a-ostensjo"
        >
          Bydel Østensjø
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <!--v-if-->
        <!--v-if-->
        <a
          class="navigation-link__label"
          href="/bydel/nordstrand"
          id="a-nordstrand"
        >
          Bydel Nordstrand
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <!--v-if-->
        <!--v-if-->
        <a
          class="navigation-link__label"
          href="/bydel/sondrenordstrand"
          id="a-sondrenordstrand"
        >
          Bydel Søndre Nordstrand
        </a>
      </li>
      
    </ul>
  </nav>
</aside>
`;
